# MatHaiePhiZik

./: CMakeLists.txt  Identification.txt  Makefile  MatHaieFilleZik.sln  MatHaieFilleZik.vcxproj  README.md  README.txt  main  main.cpp  particle.cpp  particle.hpp  test_particle.cpp  vector3d.cpp  vector3d.hpp  world.cpp  world.hpp
main/: CMakeLists.txt
main/myExe/: CMakeLists.txt
main/myExe/src/: main.cpp  main_v1.cpp  main_v2.cpp  test_matrix.cpp  test_quaternion.cpp  test_rigidBody.cpp  test_vector3d.cpp  test_windows.cpp
main/myLib/: CMakeLists.txt
main/myLib/include/: NarrowSpace.hpp  Octree.hpp  OctreeNode.hpp  forceRegister.hpp  graphicRenderer.hpp  mainLoop.hpp  matrix3.hpp  matrix4.hpp  octree.hpp  octreeNode.hpp  particle.hpp  particleAnchoredString.hpp  particleBasicForceGenerator.hpp  particleCable.hpp  particleContact.hpp  particleContactGenerator.hpp  particleContactResolver.hpp  particleDragGenerator.hpp  particleElasticString.hpp  particleFloatingGenerator.hpp  particleForceGenerator.hpp  particleGravityGenerator.hpp  particleLink.hpp  particleRod.hpp  particleStiffSpring.hpp  particleString.hpp  plane.hpp  primitive.hpp  quaternion.hpp  rigidBody.hpp  rigidBodyAnchoredString.hpp  rigidBodyDragGenerator.hpp  rigidBodyElasticString.hpp  rigidBodyFloatingGenerator.hpp  rigidBodyForceGenerator.hpp  rigidBodyGravityGenerator.hpp  rigidBodyStiffSpring.hpp  rigidBodyString.hpp  vector3d.hpp  world.hpp
main/myLib/src/: Octree.cpp  OctreeNode.cpp  forceRegister.cpp  graphicRenderer.cpp  mainLoop.cpp  matrix3.cpp  matrix4.cpp  narrowSpace.cpp  octree.cpp  octreeNode.cpp  particle.cpp  particleAnchoredString.cpp  particleCable.cpp  particleContact.cpp  particleContactResolver.cpp  particleDragGenerator.cpp  particleElasticString.cpp  particleFloatingGenerator.cpp  particleGravityGenerator.cpp  particleLink.cpp  particleRod.cpp  particleStiffSpring.cpp  particleString.cpp  plane.cpp  primitive.cpp  quaternion.cpp  rigidBody.cpp  rigidBodyAnchoredString.cpp  rigidBodyDragGenerator.cpp  rigidBodyElasticString.cpp  rigidBodyFloatingGenerator.cpp  rigidBodyGravityGenerator.cpp  rigidBodyStiffSpring.cpp  rigidBodyString.cpp  world.cpp
